--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,15 @@ body {
   font-family: "proxima-nova";
 }
 
+* {
+  box-sizing: border-box;
+}
+
 a {
   color: inherit;
   font-size: inherit;
   text-decoration: none;
 }
-
 
 .container {
   width: 1327px;
@@ -128,32 +131,239 @@ a {
   border-radius: 5px;
   background: linear-gradient(253.58deg, #FFC000 1.55%, #FF8A00 95.8%);
 }
-.active{
+
+.active {
   display: flex;
 }
-.content{
+
+.content {
   background: url(../img/content-icons.svg) 75% 50% no-repeat, linear-gradient(253.58deg, #FFC000 1.55%, #FF8A00 95.8%);
 }
-.content_title{
+
+.content_title {
   max-width: 534px;
   font-size: 44px;
-line-height: 158%;
-padding: 109px 0 26px 66px;
+  line-height: 158%;
+  padding: 109px 0 26px 66px;
 }
-.content_text{
+
+.content_text {
   max-width: 444px;
   font-size: 18px;
   line-height: 33px;
   padding: 0 0 96px 66px;
 }
 
+.promo {
+  padding-left: 60px;
+  position: relative;
+}
 
+.promo_wrappers:nth-child(1) {
+  padding: 90px 0 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
 
+.promo_wrappers:nth-child(1)::before {
+  content: "";
+  width: 22px;
+  height: 22px;
+  background: url(../img/ic-search.svg) 50% no-repeat;
+  position: absolute;
+  left: 28px;
+  top: 109px;
+}
 
+.promo_wrappers:nth-child(1)::after {
+  content: "";
+  width: 95%;
+  height: 1px;
+  background: #fff;
+  position: absolute;
+  top: 142px;
+}
 
+.promo_search {
+  width: 100%;
+  height: 78px;
+  background: linear-gradient(253.58deg, #FFC000 1.55%, #FF8A00 95.8%);
+  box-shadow: 0px 12px 35px rgba(160, 121, 0, 0.2);
+  border-radius: 10px;
+  border: none;
+  padding: 24px 0 34px 60px;
+}
+
+.promo_search::placeholder {
+  color: #fff;
+}
+
+.promo_wrappers:nth-child(2) {
+  display: flex;
+  position: relative;
+}
+
+.promo_wrappers_wrapper:nth-child(1) {
+  width: 75%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.promo_wrappers_wrapper_text {
+  color: #2F2F2F;
+}
+
+.promo_wrappers_wrapper_icons {
+  width: 57px;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 40%;
+}
+
+.promo_wrappers_wrapper_icon {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  display: block;
+}
+
+.list {
+  background: url(../img/list.svg) 50% no-repeat;
+}
+
+.table {
+  background: url(../img/table-active.svg) 50% no-repeat;
+}
+
+.promo_wrappers_wrapper:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+}
+
+.promo_wrappers_wrapper_items:nth-child(1) {
+  display: flex;
+  justify-content: space-between;
+}
+
+.promo_wrappers_wrapper_items:nth-child(2) {
+  width: 75%;
+  margin-top: 46px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(303px, 1fr));
+  grid-template-rows: repeat(5, 1fr);
+  gap: 15px 9px;
+}
+
+.promo_wrappers_wrapper_item {
+  width: 100%;
+  height: 279px;
+  background: #C4C4C4;
+  border-radius: 10px;
+  position: relative;
+  font-weight: 700;
+  display: flex;
+  align-items: flex-end;
+}
+
+.promo_wrappers_wrapper_plan {
+  position: absolute;
+  width: 70px;
+  height: 33px;
+  background: linear-gradient(253.58deg, #FFC000 1.55%, #FF8A00 95.8%);
+  right: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0 10px 0 10px;
+}
+
+.promo_wrapper_item_text {
+  width: 100%;
+  height: 73px;
+  padding-left: 30px;
+  display: flex;
+  align-items: center;
+  background: linear-gradient(253.58deg, #FFC000 1.55%, #FF8A00 95.8%);
+  border-radius: 0 0 10px 10px;
+  line-height: 24px;
+}
+
+.promo_wrappers_pages {
+  margin: 106px 0 102px;
+  color: #535353;
+  display: flex;
+  top: 10%;
+}
+
+.promo_wrappers_pages_item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  border: 1px solid #E0E0E0;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.promo_wrappers_pages_item:last-child {
+  width: 100px;
+  border-radius: 100px;
+}
+
+.promo_wrappers_pages_item:hover {
+  background: linear-gradient(253.58deg, #FFC000 1.55%, #FF8A00 95.8%);
+}
+
+.promo_wrappers_wrapper:nth-child(2) {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  color: #5C5C5C;
+  padding-left: 68px;
+}
+
+.promo_wrappers_wrapper_title {
+  font-weight: 700;
+}
+
+.promo_wrappers_wrapper_title, .promo_wrappers_wrapper_link {
+  margin-bottom: 23px;
+}
+
+.promo_wrappers_wrapper_plans {
+  display: flex;
+}
+
+.promo_wrappers_wrapper_plan_item {
+  width: 43px;
+  height: 43px;
+  border-radius: 50%;
+  border: 1px solid #5C5C5C;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 11px 34px 0;
+}
+
+.promo_wrappers_wrapper_button {
+  font-weight: 700;
+  color: #FFFEFC;
+  width: 160px;
+  height: 56px;
+  background: linear-gradient(253.58deg, #FFC000 1.55%, #FF8A00 95.8%);
+  box-shadow: 0px 12px 35px rgba(160, 121, 0, 0.2);
+  border-radius: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 @media screen and (max-width: 1325px) {
-  .container{
+  .container {
     width: 100%;
   }
   .header_container {
@@ -163,7 +373,6 @@ padding: 109px 0 26px 66px;
   .menu_list {
     margin-right: 23px;
   }
-  
   .header_enter_contributor {
     padding: 20px 17px;
   }
@@ -183,23 +392,28 @@ padding: 109px 0 26px 66px;
   .menu_list:hover::after {
     background: none;
   }
-  .content{
+  .content {
     background-position: 100% 50%;
   }
   .content_title {
     max-width: 434px;
     font-size: 34px;
     padding: 60px 0 26px 66px;
-}
-.content_text {
-  max-width: 344px;
-  font-size: 14px;
-  padding: 0 0 66px 66px;
-}
+  }
+  .content_text {
+    max-width: 344px;
+    font-size: 14px;
+    padding: 0 0 66px 66px;
+  }
+  .promo_wrappers_wrapper_button {
+    width: 100px;
+  }
+  .promo_wrappers_wrapper:nth-child(2) {
+    padding-left: 20px;
+  }
 }
 
 @media screen and (max-width: 675px) {
-  
   .header_enter {
     display: flex;
     flex-direction: column;
@@ -209,20 +423,35 @@ padding: 109px 0 26px 66px;
   }
   .content {
     background: linear-gradient(253.58deg, #FFC000 1.55%, #FF8A00 95.8%);
+  }
+  .content_title {
+    width: 90%;
+    font-size: 24px;
+    line-height: 35px;
+    padding: 40px 0 26px 20px;
+  }
+  .content_text {
+    width: 90%;
+    font-size: 14px;
+    padding: 0 0 40px 20px;
+  }
+  .promo_wrappers_wrapper_items:nth-child(1) {
+    justify-content: center;
+  }
+  .promo_wrappers_wrapper_text {
+    margin-right: 30px;
+  }
+  .promo_wrappers_wrapper_item:nth-child(odd) {
+    display: none;
+  }
+  .promo_wrappers_wrapper:nth-child(2) {
+    display: none;
+  }
+  .promo_wrappers_pages_item {
+    width: 50px;
+    height: 40px;
+  }
 }
-.content_title {
-  width: 90%;
-  font-size: 24px;
-  line-height: 35px;
-  padding: 40px 0 26px 20px;
-}
-.content_text {
-  width: 90%;
-  font-size: 14px;
-  padding: 0 0 40px 20px;
-}
-}
-
 
 @media screen and (max-width: 470px) {
   .header_container {
@@ -233,7 +462,6 @@ padding: 109px 0 26px 66px;
   .logo {
     margin-bottom: 30px;
   }
-  
   .header_enter_contributor {
     font-size: 12px;
     padding: 14px 12px;
